Use Postgres advisory lock